fixed directions spacing

--- a/src/Directions/Directions.css
+++ b/src/Directions/Directions.css
@@ -9,7 +9,7 @@
 #panel {
     float: left;
     width:20%;
-    margin-left: 5%;
+    /* margin-left: -10%; */
     text-align: center;
 }
 
@@ -18,11 +18,20 @@
 }
 
 .adp-placemark {
-    visibility: hidden!important;
-    position: absolute;
+    /* visibility: hidden!important;
+    position: absolute; */
+    width: 200px;
+    text-align: center;
 }
 
 .adp-summary {
-    visibility: hidden!important;
-    position: absolute;
+    /* visibility: hidden!important;
+    position: absolute; */
+    text-align: center;
+    margin-left: 60px;
+    font-weight: bold;
+}
+
+#directions-panel-before-map {
+    font-weight: bold;
 }
